--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 env_list =
     py312
+    lint
+    format
 minversion = 4.18.0
 
 [testenv]
@@ -9,5 +11,16 @@ package = wheel
 wheel_build_env = .pkg
 deps =
     pytest>=6
+    pytest-sugar
 commands =
-    pytest {tty:--color=yes} {posargs}
+    pytest {tty:--color=yes} -v {posargs}
+
+[testenv:lint]
+description = Lint using ruff
+deps = ruff
+commands = ruff check
+
+[testenv:format]
+description = Format files using ruff
+deps = ruff
+commands = ruff format
